--- a/views/138squad2.ejs
+++ b/views/138squad2.ejs
@@ -23,6 +23,15 @@
          <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
          <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
          <link rel="manifest" href="/site.webmanifest">
+         <style>
+          .header{
+       background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(nayanar.jpeg);
+       height: 350px;
+       background-size: cover;
+       background-position: center;
+       
+   }
+        </style>
         </head>
      <body>
       <button onclick="topFunction()" id="myBtn" class="topbtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button> 
@@ -52,16 +61,16 @@
                 
             
                 <ul id="sidemenu">
-                    <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
-                    <hr>
-                    <li><a href="/">Home</a></li>
-                    <hr>
-                        <li><a href="#about">Product</a></li>
-                    <hr>
-                        <li><a href="#about">About</a></li>
-                        <hr>
-                        <li><a href="#contact">Contact</a></li>
-                        <hr>
+                  <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
+                  <hr>
+                  <li><a href="/">Home</a></li>
+                  <hr>
+                      <li><a href="/votercreation">Voter Creation</a></li>
+                  <hr>
+                      <li><a href="/booth138">Booth 138</a></li>
+                  <hr>
+                      <li><a href="/soilhealth">Voters List</a></li>
+                  <hr>
                         <p>
                             Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
@@ -76,7 +85,7 @@
             </nav>
             <div class="icons-header">
               <a href="/"><i class="fa-solid fa-house"></i></a>
-              <a href="/savedata"><i class="fa-solid fa-user-plus"></i></a>
+              <a href="/votercreation"><i class="fa-solid fa-user-plus"></i></a>
               <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
               <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
               <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
