--- a/views/soilhealth.ejs
+++ b/views/soilhealth.ejs
@@ -56,12 +56,12 @@
                     <hr>
                     <li><a href="/">Home</a></li>
                     <hr>
-                        <li><a href="#about">Product</a></li>
+                        <li><a href="/votercreation">Voter Creation</a></li>
                     <hr>
-                        <li><a href="#about">About</a></li>
-                        <hr>
-                        <li><a href="#contact">Contact</a></li>
-                        <hr>
+                        <li><a href="/booth138">Booth 138</a></li>
+                    <hr>
+                        <li><a href="/soilhealth">Voters List</a></li>
+                    <hr>
                         <p>
                             Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
@@ -76,7 +76,7 @@
             </nav>
             <div class="icons-header">
               <a href="/"><i class="fa-solid fa-house"></i></a>
-              <a href="/savedata"><i class="fa-solid fa-user-plus"></i></a>
+              <a href="/votercreation"><i class="fa-solid fa-user-plus"></i></a>
               <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
               <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
               <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
@@ -174,13 +174,6 @@
                             </div>
                            
                             
-                            <div class="feature-archive">
-                           
-                            <a href="/archive/<%= row._id %>"><i class="fa-solid fa-fingerprint"></i></a>
-                            <a href="/voteredit/<%= row._id %>"><i class="fa-solid fa-pen-to-square"></i></a>
-                            <a href="/alert/<%= row._id %>"><i class="fa-solid fa-trash"></i></a>
-                            
-                            </div>
                             
                            
                          
