--- a/views/voterlist3.ejs
+++ b/views/voterlist3.ejs
@@ -56,13 +56,13 @@
                     <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
                     <hr>
                     <li><a href="/">Home</a></li>
-                    <hr>
-                        <li><a href="#about">Product</a></li>
-                    <hr>
-                        <li><a href="#about">About</a></li>
-                        <hr>
-                        <li><a href="#contact">Contact</a></li>
-                        <hr>
+                  <hr>
+                      <li><a href="/votercreation">Voter Creation</a></li>
+                  <hr>
+                      <li><a href="/booth138">Booth 138</a></li>
+                  <hr>
+                      <li><a href="/soilhealth">Voters List</a></li>
+                  <hr>
                         <p>
                             Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
                         </p>
