--- a/views/booth138.ejs
+++ b/views/booth138.ejs
@@ -82,16 +82,17 @@
                 <ul id="sidemenu">
                     <li><a  onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
                     <hr>
-                    <li><a href="#about">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <hr>
-                        <li><a href="#about">Product</a></li>
+                        <li><a href="/votercreation">Voter Creation</a></li>
                     <hr>
-                        <li><a href="#about">About</a></li>
-                        <hr>
-                        <li><a href="#contact">Contact</a></li>
-                        <hr>
+                        <li><a href="/booth138">Booth 138</a></li>
+                        
+                    <hr>
+                        <li><a href="/soilhealth">Voters List</a></li>
+                    <hr>
                         <p>
-                            Thank you for choosing Telinso. We value your trust and support. Please free to Contact us anytime
+                            Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
                        
                         <li><a href="/logout" class="login">Logout</a></li>
