--- a/views/login.ejs
+++ b/views/login.ejs
@@ -83,7 +83,7 @@
                         </div>
                         <div class="login-pass">
                         <label class="login-label"><i class="fa-solid fa-user"></i> username</label>
-                        <input type="text" name="username" placeholder="Telinso"  required>
+                        <input type="text" name="username" placeholder="cpm koshormoola"  required>
                         </div>
                         <div class="login-pass">
                         <label class="login-label"><i class="fa-solid fa-lock"></i> password</label>
@@ -111,57 +111,12 @@
 
        <section class="footer">
           
-        <div class="row">
+        <div class="footer-col" style="text-align: center;" >     
+         
+               <p > 	&copy; Gokuljith k</p>
            
-                <div class="footer-col" >
-                    <p>Soil Analysis</p>
-                    <p>Visualization</p>
-                    <p>Farmer Assist</p>
-                    <p>Weather Forecast</p>
-                  
-                        </div>
-                        <hr>
-                <div class="footer-col"  >
-                      <p>Data Analytics</p>
-                      <p>Cloud computing</p>
-                      <p>Internet of things</p>
-                      <p>Artificial intelligence</p>
-                           
-                                    </div>
-                                    <hr>
-                <div class="footer-col"  >
-                   <p>Empowernment</p>
-                   <p>Innovation</p>
-                   <p>Possibilities</p>
-                   <p>Collaboration</p>
-                    
-                </div>
-            
-            <hr>
-           
-            <div class="footer-col"  >
-                
-                
-                <p>Home</p>
-                <p>Product</p>
-                <p>About</p>
-                <p>Contact</p>
-            </div>
-            <hr>
-         </div>
-            <div class="footer-col" style="text-align: center;" >     
-                   <p>
-                    Telinso is an IoT-based solution that provides soil health data to farmers and agriculture enthusiasts. It consists of a comprehensive suite of software and hardware that can measure and monitor soil conditions and nutrients, such as pH, moisture, temperature, nitrogen, phosphorus, potassium, and more. By using Telinso, you can access real-time and accurate information about your soil health, and get customized recommendations on how to improve your crop productivity and soil quality. Telinso is a user-friendly, cost-effective, and scalable system that can help you optimize your farming practices and achieve sustainable agriculture. Learn more about Telinso and how it can benefit you. Contact us today
-                </p>
-            </div>
-            <div class="footer-col" style="text-align: center;" >     
-                <p>
-                    <i class="fa-brands fa-instagram"></i><i class="fa-brands fa-linkedin"></i><i class="fa-brands fa-square-facebook"></i><i class="fa-brands fa-square-x-twitter"></i>
-                   <br>
-                   <p > 	&copy; TEAM TELINSO</p>
-                </p>
-            </div>
-   </section>
+        </div>
+  </section>
               <script>
                 function auth(element){
                     element.parentElement.style.display = "none";
