--- a/views/votercreation.ejs
+++ b/views/votercreation.ejs
@@ -19,38 +19,38 @@
          <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
          <link rel="manifest" href="/site.webmanifest">
          <style>
-            .product h2{
-    
-    font-size: 25px;
-    text-align: center;
-    padding: 18px 0;
-}
-.description{
-    display: block;
-    text-align: left ;
-    font-size: 17px;
-    padding: 0px 25px;
-    font-weight: 600;
-    font-family:system-ui;
-    
-    
-    }
-.overview-description{
-    display: block;
-    font-size: 16px;
-    padding: 25px;
-    padding-top: 5px;
-    font-family:system-ui;
-    text-align: left;
-    
+                        .product h2{
+                
+                font-size: 25px;
+                text-align: center;
+                padding: 18px 0;
+            }
+            .description{
+                display: block;
+                text-align: left ;
+                font-size: 17px;
+                padding: 0px 25px;
+                font-weight: 600;
+                font-family:system-ui;
+                
+                
+                }
+            .overview-description{
+                display: block;
+                font-size: 16px;
+                padding: 25px;
+                padding-top: 5px;
+                font-family:system-ui;
+                text-align: left;
+                
 
-}
-
-
-
-</style>
+            }
+            
+            
+    
+         </style>
         </head>
-     <body>
+     <body >
        
         
          <section class="header" >
@@ -62,6 +62,7 @@
                 
                
                     
+                
                 
                         <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
             
@@ -82,13 +83,13 @@
                     <li><a  onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
                     <hr>
                     <li><a href="/">Home</a></li>
-                    <hr>
-                        <li><a href="/votercreation">Voter Creation</a></li>
-                    <hr>
-                        <li><a href="/booth138">Booth 138</a></li>
-                    <hr>
-                        <li><a href="/soilhealth">Voters List</a></li>
-                    <hr>
+                  <hr>
+                      <li><a href="/votercreation">Voter Creation</a></li>
+                  <hr>
+                      <li><a href="/booth138">Booth 138</a></li>
+                  <hr>
+                      <li><a href="/soilhealth">Voters List</a></li>
+                  <hr>
                         <p>
                             Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
@@ -108,88 +109,40 @@
           
            
               
-              <section class="product">
+              <section class="product" >
                <div class="row1">
-                
-                <h2>SQUAD LIST</h2>
+                <h2>VOTER CREATION</h2>
                 <span class="description"> Description </span>
-                <span class="overview-description">
-                    Manage elections more effectively with the comprehensive voter database feature for squad . Explore a detailed map with every house marked for easy navigation and identification. Access and download complete voter information for each house,
-                    streamlining your election planning and execution. Enhance your election strategy with precise, location-based data for squad .</span>
-                 
-                
-                <a href="/138squad1" class="class1">
+           <span class="overview-description">
+            Manage elections more effectively with the comprehensive voter database feature. Create and register new voters easily using a detailed map with every house marked for reference. Streamline voter registration and information management, enhancing your election strategy with precise, location-based data. 
+                    Empower your election team with efficient tools for voter creation and management. 
+              </span>
+                <a href="/savedata" class="class1">
                     <div class="product-col " >
                         
-                        <i class="fa-solid fa-people-group"></i>
+                        <i class="fa-solid fa-address-book"></i>
                             <div>
-                                <h3>Squad 1</h3>
+                                <h3>Manual Creation</h3>
                                 
-                            <p>The voting pattern and management of squad 1.</p>
+                            <p>Function to store and retrieve voters.</p>
                                         
                             </div>
                                 
                             </div>
                          </a>
-                   <a href="/138squad2" class="class2">
+                   <a href="/automatic" class="class2">
                    <div class="product-col" >
                        
-                    <i class="fa-solid fa-people-line"></i>
+                    <i class="fa-solid fa-people-group"></i>
                             <div>
-                            <h3>Squad 2</h3>
+                            <h3>Seamlessly Creation </h3>
                             
-                            <p>The voting pattern and management of squad 2.</p>
+                            <p>Function to store and retrieve voters.</p>
                             </div>        
                         
                                
                            </div>
-                    </a>  
-                    <a href="/138squad3" class="class2">
-                        <div class="product-col" >
-                            
-                            <i class="fa-solid fa-people-roof"></i>
-                                 <div>
-                                 <h3>Squad 3</h3>
-                                 
-                                 <p>The voting pattern and management of squad 3.</p>
-                                 </div>        
-                             
-                                    
-                                </div>
-                         </a>  
-                       
-                
-                  
-               </div>
-               <div class="row1">
-                <a href="/138squad4" class="class1">
-                    <div class="product-col " >
-                        
-                        <i class="fa-solid fa-users-line"></i>
-                            <div>
-                                <h3>Squad 4</h3>
-                                
-                            <p>The voting pattern and management of squad 4.</p>
-                                        
-                            </div>
-                                
-                            </div>
-                         </a>
-                   <a href="/138squad5" class="class2">
-                   <div class="product-col" >
-                       
-                    <i class="fa-solid fa-users-rectangle"></i>
-                            <div>
-                            <h3>Squad 5</h3>
-                            
-                            <p>The voting pattern and management of squad 5.</p>
-                            </div>        
-                        
-                               
-                           </div>
-                    </a>  
-                    
-                   
+                        </a>  
                        
                 
                   
@@ -200,17 +153,11 @@
          
         
 
-               <section class="footer">
-          
-        
-            
+               <section class="footer" >
                 <div class="footer-col" style="text-align: center;" >     
-                
-                      
-                       <p > 	&copy; Gokuljith k</p>
-                   
+                   <p > 	&copy; Gokuljith k</p>
                 </div>
-       </section>
+              </section>
    <script>
     // Get current date and time
     var now = new Date();
