--- a/views/voterlist.ejs
+++ b/views/voterlist.ejs
@@ -25,8 +25,10 @@
          <link rel="manifest" href="/site.webmanifest">
          <style>
            .header{
-        background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(138.jpeg);
+        background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(kodiyeri.jpeg);
         height: 350px;
+        background-position: center;
+        background-size: cover;
         
     }
          </style>
@@ -63,13 +65,13 @@
                     <li><a href="#contact" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
                     <hr>
                     <li><a href="/">Home</a></li>
-                    <hr>
-                        <li><a href="#about">Product</a></li>
-                    <hr>
-                        <li><a href="#about">About</a></li>
-                        <hr>
-                        <li><a href="#contact">Contact</a></li>
-                        <hr>
+                  <hr>
+                      <li><a href="/votercreation">Voter Creation</a></li>
+                  <hr>
+                      <li><a href="/booth138">Booth 138</a></li>
+                  <hr>
+                      <li><a href="/soilhealth">Voters List</a></li>
+                  <hr>
                         <p>
                             Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
@@ -84,7 +86,7 @@
             </nav>
             <div class="icons-header">
               <a href="/"><i class="fa-solid fa-house"></i></a>
-              <a href="/savedata"><i class="fa-solid fa-user-plus"></i></a>
+              <a href="/votercreation"><i class="fa-solid fa-user-plus"></i></a>
               <a href="/booth138"><i class="fa-brands fa-slack"></i></a>
               <a href="/voterlist"><i class="fa-solid fa-address-book"></i></a>
               <a href="/squadlist"><i class="fa-solid fa-people-group"></i></a>
