--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -54,14 +54,14 @@
                 <ul id="sidemenu">
                     <li><a  onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
                     <hr>
-                    <li><a href="#about">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <hr>
-                        <li><a href="#about">Product</a></li>
+                        <li><a href="/votercreation">Voter Creation</a></li>
                     <hr>
-                        <li><a href="#about">About</a></li>
-                        <hr>
-                        <li><a href="#contact">Contact</a></li>
-                        <hr>
+                        <li><a href="/booth138">Booth 138</a></li>
+                    <hr>
+                        <li><a href="/soilhealth">Voters List</a></li>
+                    <hr>
                         <p>
                             Thank you for choosing my platform. I value your trust and support. Please free to Contact me anytime
                         </p>
@@ -139,7 +139,7 @@
               
               <section class="product">
                <div class="row1">
-                <a href="/savedata" class="class1">
+                <a href="/votercreation" class="class1">
                     <div class="product-col " >
                         
                         <i class="fa-solid fa-user-plus"></i>
@@ -165,7 +165,7 @@
                                
                            </div>
                            </a>
-                           <a href="" class="class3">    
+                           <a  class="class3">    
                             <div class="product-col"  >
                                 <i class="fa-brands fa-algolia"></i>
                                     <div>
@@ -182,7 +182,7 @@
                </div>
               <div class="row2">
                
-              <a href="" class="class4">
+              <a  class="class4">
                <div class="product-col "  >
                 <i class="fa-brands fa-stack-overflow"></i>
                         <div>
