--- a/public/login.css
+++ b/public/login.css
@@ -237,7 +237,7 @@ form .btn2:hover{
 
 
     body{
-      background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+      background-image: linear-gradient(to top, #fff1eb 0%, #f9acac 100%);
     }
     .header{
    
