--- a/public/soilhealth.css
+++ b/public/soilhealth.css
@@ -420,8 +420,10 @@ svg{
 @media(max-width:800px){
 
     .header{
-        background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(list.jpeg);
+        background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(left.jpg);
         height: 350px;
+        background-position: center;
+        background-size: cover;
         
     }
     .desktop{
