--- a/views/138squad1.ejs
+++ b/views/138squad1.ejs
@@ -205,16 +205,22 @@
     <script>
       function searchData() {
           
-          var input = document.getElementById("myInput").value.toLowerCase();
-          var elements = document.getElementsByClassName("soil-search");
-          var elements2 = document.getElementsByClassName("month-search");
+        var input = document.getElementById("myInput").value.toLowerCase();
+          var elements = document.getElementsByClassName("serial-search");
+          var elements2 = document.getElementsByClassName("name-search");
+          var elements3 = document.getElementsByClassName("house-search");
 
          
           for (var i = 0; i < elements.length; i++) {
               
               var textContent = elements[i].textContent.toLowerCase();
               var textContent2 = elements2[i].textContent.toLowerCase();
-              if (textContent.includes(input)||textContent2.includes(input)) {
+              var textContent3 = elements3[i].textContent.toLowerCase();
+              var searchRegex = new RegExp(`\\b${input}\\b`);
+              var matchFound = searchRegex.test(textContent) ;
+
+
+              if (matchFound || textContent2.includes(input)||textContent3.includes(input)) {
                   
                   elements[i].parentElement.parentElement.style.display = "flex";
               } else {
