--- a/views/voterlist.ejs
+++ b/views/voterlist.ejs
@@ -232,7 +232,11 @@
               var textContent = elements[i].textContent.toLowerCase();
               var textContent2 = elements2[i].textContent.toLowerCase();
               var textContent3 = elements3[i].textContent.toLowerCase();
-              if (textContent.includes(input)||textContent2.includes(input)||textContent3.includes(input)) {
+              var searchRegex = new RegExp(`\\b${input}\\b`);
+              var matchFound = searchRegex.test(textContent) ;
+
+
+              if (matchFound || textContent2.includes(input)||textContent3.includes(input)) {
                   
                   elements[i].parentElement.parentElement.style.display = "flex";
               } else {
