--- a/views/booth138open.ejs
+++ b/views/booth138open.ejs
@@ -96,7 +96,7 @@
              
             <div class="row">
                <div class="overview-col">
-                   <h1>OPEN VOTE LIST 138</h1>
+                   <h1>OPEN VOTE LIST</h1>
                    <span class="description"> Description </span>
                    <span class="overview-description">
                     Manage elections more effectively with the comprehensive voter database feature for booth 138. Explore a detailed map with every house marked for open voting, allowing for real-time monitoring. Access and download complete information for each house participating in open voting, streamlining your
